# simplicity-hs

./: .gitignore  .gitmodules  README.md  simplicity.cabal  stack.yaml
src/: BitMachine.hs  MachineView.hs  Main.hs  Simplicity.hs
